--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main>
         <span>
             <h2>
-                <a href="#" class="titleLink">Two suprises in browser crashes</a>
+                <a href="#" class="titleLink">Two surprises in browser crashes</a>
             </h2>
             <p class="date">January 04, 2023</p>
         </span>
@@ -74,7 +74,7 @@
                 From this I took away an important lesson: even when your app is not pushing the
                 boundaries of browsers, monitoring for crashes is probably worth it.
                 <a href="https://developer.chrome.com/articles/reporting-api/">Read this overview</a> to
-                get started; I believe it's as simple as providing a <code>default</code> endpoint in an
+                get started; I believe it's as simple as providing a <span class="specialText">default</span> endpoint in an
                 HTTP header and accepting POSTs there.
             </p>
         </div>
